# DDNSNoIPUpdater

./: .env.example  Dockerfile  README.md  pyproject.toml
app/: logs.py  main.py  settings.py
